--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,36 @@
 /* Ini CSS */
+*{
+ font-family: poppins, 'sans-serif';
+}
+
+.header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    
+}
+
+.logo {
+    height: 50px;
+    width: 50px;
+    border: 1px solid;
+}
+
+.menu {
+    
+}
+
+.menu table {
+    width: 100%;
+    border-collapse: collapse;
+    
+}
+
+.menu td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    font-size: 14px;
+}
