--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,46 @@
 /* Ini CSS */
-*{
- font-family: poppins, 'sans-serif';
+body {
+    font-family: poppins, 'sans-serif';
+    margin: 0;
+    padding: 0;
 }
 
 .header-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 30px;
-    margin-right: 30px;
-    
+    padding: 10px 20px;
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
-.logo {
-    height: 50px;
-    width: 50px;
-    border: 1px solid;
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 20px;
 }
 
-.menu {
-    
+nav a {
+    text-decoration: none;
+    color: #000;
+    padding: 8px 12px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+nav a:hover {
+    color: #ff6c31;
+}
+
+.logo img{
+    height: 40px;
 }
 
 .menu table {
     width: 100%;
     border-collapse: collapse;
-    
 }
 
 .menu td {
@@ -33,4 +48,47 @@
     padding: 10px;
     text-align: center;
     font-size: 14px;
+}
+
+.container{
+    padding: 30px;
+}
+
+.home-text h1{
+    font-size: 32px;
+}
+
+.home-text p{
+    margin-top: -30px;
+}
+
+
+
+/* responsive media */
+@media (max-width: 600px) {
+    .header-wrapper  {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu {
+        margin-top: 10px;
+    }
+
+    nav ul { 
+        gap: 10px;
+        width: 100%;
+    }
+
+    nav a {
+        width: 100%;
+        text-align: center;
+        padding: 12px 0;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    nav a:hover {
+        color: #ff6c31;
+    }
+
+    
 }
