--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ nav a:hover {
 
 .container{
     padding: 30px;
+    margin-top: -20px;
 }
 
 .home-text h1{
@@ -60,6 +61,11 @@ nav a:hover {
 
 .home-text p{
     margin-top: -30px;
+}
+
+.slide img {
+    width: 100%;
+    height: 500px;
 }
 
 
@@ -90,5 +96,7 @@ nav a:hover {
         color: #ff6c31;
     }
 
-    
+    .slide img{
+        height: auto;
+    }
 }
