--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,14 @@ nav a:hover {
     color: #ff6c31;
 }
 
+.logo{
+    display: flex;
+    align-items: center;
+}
+
 .logo img{
-    height: 40px;
+    padding-right: 10px;
+    height: 50px;
 }
 
 .menu table {
@@ -68,6 +74,32 @@ nav a:hover {
     height: 500px;
 }
 
+.profile-container {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+}
+
+.card-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    width: 250px;
+}
+
+.card img {
+    width: 100px;
+    height: auto;
+    border-radius: 10px 10px 0 0;
+}
 
 
 /* responsive media */
@@ -98,5 +130,19 @@ nav a:hover {
 
     .slide img{
         height: auto;
+    }
+
+    .profile-content h1{
+        text-align: center;
+    }
+
+    .card-wrapper{
+        justify-content: center;
+    }
+
+    .card{
+        width: 55%;
+        padding: 20px;
+        
     }
 }
