--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
 }
 
+/* navbar */
 .header-wrapper {
     display: flex;
     justify-content: space-between;
@@ -56,6 +57,7 @@ nav a:hover {
     font-size: 14px;
 }
 
+/* home */
 .container{
     padding: 30px;
     margin-top: -20px;
@@ -74,11 +76,11 @@ nav a:hover {
     height: 500px;
 }
 
+/* profile */
 .profile-container {
     display: flex;
     justify-content: center;
     text-align: center;
-
 }
 
 .card-wrapper{
@@ -100,6 +102,38 @@ nav a:hover {
     height: auto;
     border-radius: 10px 10px 0 0;
 }
+
+/* portfolio */
+.porfolio-container{
+    margin-top: 30px;
+    justify-content: center;
+    text-align: center;
+    background-color: #f5f5f5;
+}
+
+.porfolio-container .item-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.portfolio-item {
+    margin: 25px;
+    text-align: center;
+}
+
+.porfolio-container h1{
+    padding-top: 30px;
+    margin-bottom: -20px;
+}
+
+.portfolio-item img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+/* form */
 
 
 /* responsive media */
