--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
 }
 
+
 /* navbar */
 .header-wrapper {
     display: flex;
@@ -14,6 +15,8 @@ body {
     background-color: #fff;
     border-bottom: 1px solid #ddd;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    position: fixed;
+    width: -webkit-fill-available;
 }
 
 nav ul {
@@ -57,13 +60,14 @@ nav a:hover {
     font-size: 14px;
 }
 
+
 /* home */
 .container{
     padding: 30px;
-    margin-top: -20px;
 }
 
 .home-text h1{
+    margin-top: 90px;
     font-size: 32px;
 }
 
@@ -75,6 +79,7 @@ nav a:hover {
     width: 100%;
     height: 500px;
 }
+
 
 /* profile */
 .profile-container {
@@ -102,6 +107,7 @@ nav a:hover {
     height: auto;
     border-radius: 10px 10px 0 0;
 }
+
 
 /* portfolio */
 .porfolio-container{
@@ -133,8 +139,79 @@ nav a:hover {
     object-fit: cover;
 }
 
-/* form */
 
+/* form */
+.form-container h1{
+    text-align: center;
+}
+.form-wrapper {
+    display: flex;
+    max-width: 700px;
+    justify-content: space-around;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-wrapper label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+.form-wrapper input[type="text"],
+.form-wrapper input[type="date"],
+.form-wrapper textarea {
+    width: calc(100% - 20px);
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.form-wrapper input[type="radio"] {
+    margin-right: 10px;
+}
+
+.form-wrapper .radio {
+    display: flex;
+    align-items: center;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
+}
+
+.form-wrapper input[type="submit"] {
+    background-color: #ec3629;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.form-wrapper .form-result{
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    width: 40%;
+}
+
+
+/* footer */
+footer {
+    background-color: #1b1b1b;
+    color: #fff;
+    text-align: center;
+    margin-top: 30px;
+    padding: 10px 0;
+    bottom: 0;
+    width: 100%;
+}
 
 /* responsive media */
 @media (max-width: 600px) {
@@ -162,6 +239,10 @@ nav a:hover {
         color: #ff6c31;
     }
 
+    .home-text h1 {
+        margin-top: 120px;
+    }
+
     .slide img{
         height: auto;
     }
@@ -176,7 +257,16 @@ nav a:hover {
 
     .card{
         width: 55%;
-        padding: 20px;
-        
+        padding: 20px;   
+    }
+
+    .form-wrapper{
+        width: 80%;
+        display: block;
+    }
+
+    .form-wrapper .form-result{
+        margin-top: 15px;
+        width: 90%;
     }
 }
